fixes for bugs where edit box loses focus;

--- a/projects/angular-editor/src/lib/angular-editor.component.html
+++ b/projects/angular-editor/src/lib/angular-editor.component.html
@@ -25,7 +25,7 @@
          (blur)="onTextAreaBlur($event)"
          (click)="exec()"
          (keyup)="exec()"
-         (mouseout)="onTextAreaMouseOut($event)"
+         (mouseleave)="onTextAreaMouseLeave($event)"
     >
     </div>
     <span class="angular-editor-placeholder">{{ placeholder || config['placeholder'] }}</span>
