--- a/projects/angular-editor/src/lib/angular-editor-toolbar.component.html
+++ b/projects/angular-editor/src/lib/angular-editor-toolbar.component.html
@@ -57,15 +57,15 @@
                [disabled]="htmlMode"
                tabindex="-1"></ae-select>
   </div>
-  <div class="angular-editor-toolbar-set">
+  <!-- <div class="angular-editor-toolbar-set">
 
     <ae-select class="select-font" [options]="fonts"
                [(ngModel)]="fontName"
                (change)="setFontName(fontName)"
                [disabled]="htmlMode"
                tabindex="-1"></ae-select>
-  </div>
-  <div class="angular-editor-toolbar-set">
+  </div> -->
+  <!-- <div class="angular-editor-toolbar-set">
 
     <ae-select class="select-font-size" [options]="fontSizes"
                [(ngModel)]="fontSize"
@@ -73,8 +73,8 @@
                [disabled]="htmlMode"
                tabindex="-1">
     </ae-select>
-  </div>
-  <div class="angular-editor-toolbar-set">
+  </div> -->
+  <!-- <div class="angular-editor-toolbar-set">
     <input
       style="display: none"
       type="color" (change)="insertColor(fgInput.value, 'textColor')"
@@ -87,7 +87,7 @@
       #bgInput>
     <button [id]="'backgroundColorPicker-'+id" type="button" class="angular-editor-button" (click)="bgInput.click()" title="Background Color"
             [disabled]="htmlMode" tabindex="-1"><span class="color-label background"><i class="fa fa-font"></i></span></button>
-  </div>
+  </div> -->
   <div *ngIf="_customClasses" class="angular-editor-toolbar-set">
 
     <ae-select class="select-custom-style" [options]="customClassList"
@@ -121,8 +121,8 @@
     <button [id]="'clearFormatting-'+id" type="button" title="Clear Formatting" class="angular-editor-button"
             (click)="triggerCommand('removeFormat')" [disabled]="htmlMode" tabindex="-1"><i class='fa fa-remove'></i></button>
   </div>
-  <div class="angular-editor-toolbar-set">
+  <!-- <div class="angular-editor-toolbar-set">
     <button [id]="'toggleEditorMode-'+id" type="button" title="HTML Code" class="angular-editor-button"
             (click)="triggerCommand('toggleEditorMode')" tabindex="-1"><i class='fa fa-code'></i></button>
-  </div>
+  </div> -->
 </div>
