--- a/projects/angular-editor/src/lib/angular-editor-toolbar.component.html
+++ b/projects/angular-editor/src/lib/angular-editor-toolbar.component.html
@@ -105,7 +105,7 @@
             title="Unlink" [disabled]="htmlMode || !linkSelected" tabindex="-1">
       <i class="fa fa-chain-broken"></i>
     </button>
-    <input
+    <!-- <input
       style="display: none"
       accept="image/*"
       type="file" (change)="onFileChanged($event)"
@@ -113,7 +113,7 @@
     <button [id]="'insertImage-'+id" type="button" class="angular-editor-button" (click)="fileInput.click()" title="Insert Image"
             [disabled]="htmlMode" tabindex="-1"><i class="fa fa-image"></i></button>
     <button [id]="'insertVideo-'+id" type="button" class="angular-editor-button"
-            (click)="insertVideo()" title="Insert Video" [disabled]="htmlMode" tabindex="-1"><i class="fa fa-video-camera"></i></button>
+            (click)="insertVideo()" title="Insert Video" [disabled]="htmlMode" tabindex="-1"><i class="fa fa-video-camera"></i></button> -->
     <button [id]="'insertHorizontalRule-'+id" type="button" title="Horizontal Line" class="angular-editor-button"
             (click)="triggerCommand('insertHorizontalRule')" [disabled]="htmlMode" tabindex="-1"><i class="fa fa-minus"></i></button>
   </div>
