--- a/projects/angular-editor/src/lib/angular-editor-toolbar.component.scss
+++ b/projects/angular-editor/src/lib/angular-editor-toolbar.component.scss
@@ -1,13 +1,21 @@
 @import "style";
 
 .select-button {
-  display: inline-block;
-  // border: #000066 solid;
-  // padding-right: 10px;
-  // padding: auto;
-  &.disabled {
+    display: inline-block;
+
+    // border: #000066 solid;
+    // padding-right: 10px;
+    // padding: auto;
+    &.disabled {
+        cursor: pointer;
+        background-color: #f1f1f1;
+        transition: 0.2s ease;
+    }
+}
+
+.markdown {
+    color: #274959;
+    font-weight: bold;
     cursor: pointer;
-    background-color: #f1f1f1;
-    transition: 0.2s ease;
-  }
+    outline:none!important;
 }
