changes for image scaling  and resizing

--- a/projects/angular-editor/src/lib/angular-editor-toolbar.component.html
+++ b/projects/angular-editor/src/lib/angular-editor-toolbar.component.html
@@ -149,7 +149,7 @@
   </div>
   <div style="width: 130px;padding-top: 6px;text-align: right;">
     <button [id]="'markdown-'+id" type="button" class="angular-editor-button" (click)="emitMarkdown()" class="markdown"
-     [hidden]="isButtonHidden('markDown')" tabindex="-1">
+     [hidden]="isButtonHidden('markDown')" tabindex="-1" data-cy="markdown-button">
     Markdown Mode
     </button>
   </div>
