restore the original providers structure; Fix focus issue with adding link;

--- a/projects/angular-editor/src/lib/angular-editor.component.html
+++ b/projects/angular-editor/src/lib/angular-editor.component.html
@@ -43,6 +43,7 @@
                (mouseout)="onTextAreaMouseOut($event)"
           >
           </div>
+          <!-- <p>{{ editorService.selectedText }}</p> -->
           <span class="angular-editor-placeholder">{{ placeholder || config['placeholder'] }}</span>
      </div>
      <angular-editor-toolbar
