--- a/projects/angular-editor/src/lib/angular-editor.component.html
+++ b/projects/angular-editor/src/lib/angular-editor.component.html
@@ -16,6 +16,7 @@
           [defaultFontName]="config.defaultFontName"
           [defaultFontSize]="config.defaultFontSize"
           [hiddenButtons]="config.toolbarHiddenButtons"
+          [insertResourceCallback]="config.toolbarInsertResourceCallback"
           (execute)="executeCommand($event)"
           (markdownEmitter)="emitMarkdown($event)"
      ></angular-editor-toolbar>
